--- a/src/ReactPlayground/components/Preview/iframe.html
+++ b/src/ReactPlayground/components/Preview/iframe.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Preview</title>
+    <link rel="stylesheet" href="https://unpkg.com/antd@4.21.5/dist/antd.min.css">
+    <script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
+    <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
+    <script src="https://unpkg.com/antd@4.21.5"></script>
   </head>
   <body>
     <script>
