--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,24 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  * {
+    margin: 0;
+    padding: 0;
+  }
+}
+
+@layer components {
+  .scrollbar-custom::-webkit-scrollbar {
+    height: 1px;
+  }
+
+  .scrollbar-custom::-webkit-scrollbar-track {
+    background-color: #ddd;
+  }
+
+  .scrollbar-custom::-webkit-scrollbar-thumb {
+    background-color: #ddd;
+  }
+}
